<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/markerDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/markerDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/markerAvgSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avg_speed"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/markerDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/markerCaloriesBurned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories_burned"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>